--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "fastest-levenshtein": "^1.0.16",
+    "ioredis": "^5.6.1",
     "uuid": "^11.1.0",
     "ws": "^8.18.3"
   }
