--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.6.1",
+    "@react-three/fiber": "^9.2.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
+    "recoil": "^0.7.7",
+    "spinners-react": "^1.0.11",
+    "three": "^0.178.0",
+    "ws": "^8.18.3",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
