--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.2.0",
+    "@tailwindcss/vite": "^4.1.11",
     "lucide-react": "^0.525.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.7.1",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "recoil": "^0.7.7",
     "spinners-react": "^1.0.11",
-    "three": "^0.178.0",
+    "tailwindcss": "^4.1.11",
+    "three": "^0.167.1",
     "ws": "^8.18.3",
     "zustand": "^5.0.6"
   },
